--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <link rel="icon" href="./assets/img/tictactoe-1.png">
 	<title>Tic Tac Toe</title>
 	<link href="https://fonts.googleapis.com/css?family=Bahiana" rel="stylesheet">
 	<link href="./assets/css/phone-default.css" rel="stylesheet">
@@ -73,9 +74,9 @@
 		</div>	
 		<div id="fbLoginContainer">
 			<fb:login-button autologoutlink="true" scope="public_profile,email,user_friends" onlogin="checkLoginState();">
-			</fb:login-button></div>
-		</div>
-	</div>
+			</fb:login-button>
+        </div>
+    </div>
 	
 	<form id="checkForPending_frm" action="./public/checkForPending.php" method="POST">
 		<input type="hidden" id="fb-UID" name="fb-UID" />
