--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -54,8 +54,7 @@
 		
 		function getUserID(response){
 			var userID = response.authResponse.userID;
-			alert(userID);
-			var $fbUID = $("#fb-UID");
+			var $fbUID = $("#fbuid");
 			var $checkForPending_frm = $("#checkForPending_frm");
 			$fbUID.val(userID)
 			checkForPending_frm.submit();
@@ -78,7 +77,7 @@
 	</div>
 	
 	<form id="checkForPending_frm" action="./public/checkForPending.php" method="POST">
-		<input type="hidden" id="fb-UID" name="fb-UID" />
+		<input type="hidden" id="fbuid" name="fbuid" />
 	</form>
 </body>
 </html>
