--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -70,7 +70,7 @@
 
 	<div class="container">
 		<div class="tictactoe">
-			<img src="./assets/img/tictactoe-1.png" class="tictactoe">
+			<img src="../tictactoe/assets/img/tictactoe-1.png" class="tictactoe">
 		</div>	
 		<div id="fbLoginContainer">
 			<fb:login-button autologoutlink="true" scope="public_profile,email,user_friends" onlogin="checkLoginState();">
