--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -55,6 +55,8 @@
 		
 		function getUserID(response){
 			var userID = response.authResponse.userID;
+			/*var firstName= response.authResponse.first_name;*/
+			console.log(firstName);
 			var $fbUID = $("#fbuid");
 			var $checkForPending_frm = $("#checkForPending_frm");
 			$fbUID.val(userID)
